# Izhi

./: .gitignore  README.md
.github/workflows/: publish.yml
collector/: README.md  pyproject.toml
collector/src/gh_pr_comments/: __init__.py  auth.py  cli.py  fetcher.py  gh_cli_fetcher.py  models.py  serve.py
collector/tests/: test_auth.py  test_fetcher.py  test_gh_cli_fetcher.py  test_models.py
dashboard/: package.json
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: ActivityOverTime.tsx  ChartCard.tsx  Dashboard.tsx  FileUpload.tsx  PRClosedByPerson.tsx  PRCreatedByPerson.tsx  PRsByRepo.tsx  RepoTimeStats.tsx  ReviewStatsByPerson.tsx  TotalCommentsByPerson.tsx
dashboard/src/utils/: dataTransform.ts
