[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "izhi"
version = "0.7.0"
description = "Analyze PR comments across a GitHub organization"
readme = "README.md"
license = "MIT"
authors = [{ name = "Fabio" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyGithub>=2.1.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
izhi = "gh_pr_comments.cli:main"
mikan = "gh_pr_comments.serve:main"

[project.urls]
Repository = "https://github.com/fabioasdias/Izhi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gh_pr_comments = ["dashboard/**/*"]
